Localisation and Endpoint update

--- a/TurnkeySDKDemoAndUnitTest/Turnkey/Views/Home/Index.cshtml
+++ b/TurnkeySDKDemoAndUnitTest/Turnkey/Views/Home/Index.cshtml
@@ -101,7 +101,7 @@
         <section id="getAvailablePaymentSolutions" class="hiddenDiv">
             <h3>Get available payment solutions</h3>
             <div class="form-group">
-                <label for="country">country:</label><input id="country" value="FR" class="form-control" />
+                <label for="country">country:</label><input id="country" value="ES" class="form-control" />
             </div>
             <div class="form-group">
                 <label for="currency">currency:</label><input id="currency" value="EUR" class="form-control" />
@@ -111,16 +111,16 @@
         <section id="tokenize" class="hiddenDiv">
             <h3>Tokenize</h3>
             <div class="form-group">
-                <label for="number">number:</label><input id="numberToTokenize" value="5424180279791732" class="form-control" />
+                <label for="number">number:</label><input id="numberToTokenize" value="5454545454545454" class="form-control" />
             </div>
             <div class="form-group">
-                <label for="nameOnCard">nameOnCard:</label><input id="nameOnCardToTokenize" value="mastercard" class="form-control" />
+                <label for="nameOnCard">nameOnCard:</label><input id="nameOnCardToTokenize" value="test" class="form-control" />
             </div>
             <div class="form-group">
                 <label for="expiryMonth">expiryMonth:</label><input id="expiryMonthToTokenize" value="04" class="form-control" />
             </div>
             <div class="form-group">
-                <label for="expiryYear">expiryYear:</label><input id="expiryYearToTokenize" value="2021" class="form-control" />
+                <label for="expiryYear">expiryYear:</label><input id="expiryYearToTokenize" value="2023" class="form-control" />
             </div>
             <button class="btn btn-default" onclick="invokeTokenize()">Send</button>
         </section>
@@ -133,10 +133,10 @@
                 <label for="channel">channel:</label><input id="channelToPurchase" value="ECOM" class="form-control" />
             </div>
             <div class="form-group">
-                <label for="country">country:</label><input id="countryToPurchase" value="PL" class="form-control" />
+                <label for="country">country:</label><input id="countryToPurchase" value="ES" class="form-control" />
             </div>
             <div class="form-group">
-                <label for="currency">currency:</label><input id="currencyToPurchase" value="PLN" class="form-control" />
+                <label for="currency">currency:</label><input id="currencyToPurchase" value="EUR" class="form-control" />
             </div>
             <div class="form-group">
                 <label for="paymentSolutionId">paymentSolutionId:</label><input id="paymentSolutionIdToPurchase" value="500" class="form-control" />
@@ -165,10 +165,10 @@
                 <label for="channel">channel:</label><input id="channelToAuth" value="ECOM" class="form-control" />
             </div>
             <div class="form-group">
-                <label for="country">country:</label><input id="countryToAuth" value="PL" class="form-control" />  @*FR*@
+                <label for="country">country:</label><input id="countryToAuth" value="ES" class="form-control" />  @*FR*@
             </div>
             <div class="form-group">
-                <label for="currency">currency:</label><input id="currencyToAuth" value="PLN" class="form-control" />@*EUR*@
+                <label for="currency">currency:</label><input id="currencyToAuth" value="EUR" class="form-control" />@*EUR*@
             </div>
             <div class="form-group">
                 <label for="paymentSolutionId">paymentSolutionId:</label><input id="paymentSolutionIdToAuth" value="500" class="form-control" />
@@ -202,10 +202,10 @@
                 <label for="channel">channel:</label><input id="channelToVERIFY" value="ECOM" class="form-control" />
             </div>
             <div class="form-group">
-                <label for="country">country:</label><input id="countryToVERIFY" value="PL" class="form-control" />
+                <label for="country">country:</label><input id="countryToVERIFY" value="ES" class="form-control" />
             </div>
             <div class="form-group">
-                <label for="currency">currency:</label><input id="currencyToVERIFY" value="PLN" class="form-control" />
+                <label for="currency">currency:</label><input id="currencyToVERIFY" value="EUR" class="form-control" />
             </div>
             <div class="form-group">
                 <label for="paymentSolutionId">paymentSolutionId:</label><input id="paymentSolutionIdToVERIFY" value="500" class="form-control" />
@@ -266,10 +266,10 @@
         <section id="redirect" class="hiddenDiv">
             <h3>Redirect</h3>
             <div class="form-group">
-                <label for="country">country:</label><input id="countryToRedirect" value="PL" class="form-control" />
+                <label for="country">country:</label><input id="countryToRedirect" value="ES" class="form-control" />
             </div>
             <div class="form-group">
-                <label for="currency">currency:</label><input id="currencyToRedirect" value="PLN" class="form-control" />
+                <label for="currency">currency:</label><input id="currencyToRedirect" value="EUR" class="form-control" />
             </div>
             <div class="form-group">
                 <label for="amount">amount:</label><input id="amountToRedirect" value="20.0" class="form-control" />
@@ -289,7 +289,7 @@
         <section id="redirect2" class="hiddenDiv">
             <h3>Redirect 2</h3>
             <div class="form-group">
-                <label for="country">country:</label><input id="countryToRedirect2" value="FR" class="form-control" />
+                <label for="country">country:</label><input id="countryToRedirect2" value="ES" class="form-control" />
             </div>
             <div class="form-group">
                 <label for="currency">currency:</label><input id="currencyToRedirect2" value="EUR" class="form-control" />
@@ -317,10 +317,10 @@
                 <label for="country">customerId:</label><input id="customerIdToJsaApi" value="" class="form-control" />
             </div>
             <div class="form-group">
-                <label for="country">country:</label><input id="countryToJsaApi" value="PL" class="form-control" />
+                <label for="country">country:</label><input id="countryToJsaApi" value="ES" class="form-control" />
             </div>
             <div class="form-group">
-                <label for="currency">currency:</label><input id="currencyToJsaApi" value="PLN" class="form-control" />
+                <label for="currency">currency:</label><input id="currencyToJsaApi" value="EUR" class="form-control" />
             </div>
             <div class="form-group">
                 <label for="amount">amount:</label><input id="amountToJsaApi" value="20.0" class="form-control" />
@@ -344,7 +344,7 @@
                 <label for="country">country:</label><input id="countryToRedirect" value="PL" class="form-control" />
             </div>
             <div class="form-group">
-                <label for="currency">currency:</label><input id="currencyToRedirect" value="PLN" class="form-control" />
+                <label for="currency">currency:</label><input id="currencyToRedirect" value="ES" class="form-control" />
             </div>
             <div class="form-group">
                 <label for="amount">amount:</label><input id="amountToRedirect" value="20.0" class="form-control" />
